deploy/k8s-deployment.yaml
##############################################################################
#                                NAMESPACE                                   #
##############################################################################
apiVersion: v1
kind: Namespace
metadata:
  name: justaml
---
##############################################################################
#                                   REDIS                                    #
##############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: justaml
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.1-alpine
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: justaml
spec:
  ports:
    - name: http
      port: 6379
      targetPort: 6379
  selector:
    app: redis
---
##############################################################################
#                         INGRESS+DEPLOYMENTS                                #
##############################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justaml
  namespace: justaml
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  selector:
    matchLabels:
      app: justaml-app
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: justaml-app
    spec:
      volumes:
        - name: justaml-vol-data
          hostPath:
            path: /storage/justaml/data
        - name: justaml-vol-uploads
          hostPath:
            path: /storage/justaml/uploads
      containers:
        - name: app
          image: mustakimali/justaml:220621_2050
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: justaml-vol-data
              mountPath: /app/App_Data
            - name: justaml-vol-uploads
              mountPath: /app/wwwroot/upload
          livenessProbe:
            httpGet:
              path: /api/test
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/test
              port: 3000
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 5
          resources:
            requests:
              memory: "128M"
              cpu: "256m"
            limits:
              memory: "512M"
              cpu: "512m"
---
##############################################################################
#                                  SERVICE                                   #
##############################################################################
apiVersion: v1
kind: Service
metadata:
  name: justaml-service
  namespace: justaml
spec:
  ports:
    - name: https
      port: 80
      targetPort: 3000
  selector:
    app: justaml-app
---
##############################################################################
#                                  INGRESS                                   #
##############################################################################
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: justaml-ingress
  namespace: justaml
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
spec:
  tls:
  - hosts:
    - tnxfr.com
  backend:
    serviceName: justaml-service
    servicePort: 80
  rules:
    - host: tnxfr.com
